--- a/VendorAndOrderTracker/Views/Home/Index.cshtml
+++ b/VendorAndOrderTracker/Views/Home/Index.cshtml
@@ -2,4 +2,6 @@
   Layout = "_Layout";
 }
 
-<h1>Pierres Vendor and Order Tracker</h1>
+<h3>Welcome to your Vendor/Order Tracker</h3>
+<h4><a href="/vendors">View Vendors</a></h4>
+<h4><a href="/vendors/new">Add a new vendor</a></h4>
