--- a/VendorAndOrderTracker/Views/Home/Index.cshtml
+++ b/VendorAndOrderTracker/Views/Home/Index.cshtml
@@ -3,5 +3,5 @@
 }
 
 <h3>Welcome to your Vendor/Order Tracker</h3>
-<h4><a href="/vendors">View Vendors</a></h4>
+<h4><a href="/vendors">View vendors</a></h4>
 <h4><a href="/vendors/new">Add a new vendor</a></h4>
