--- a/VendorAndOrderTracker/Views/Shared/_Layout.cshtml
+++ b/VendorAndOrderTracker/Views/Shared/_Layout.cshtml
@@ -15,7 +15,7 @@
           <!-- Nav -->
           <ul class="nav nav-pills">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="#">Active</a>
+              <a class="nav-link" href="/">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Much longer nav link</a>
