--- a/VendorAndOrderTracker/Views/Shared/_Layout.cshtml
+++ b/VendorAndOrderTracker/Views/Shared/_Layout.cshtml
@@ -18,7 +18,7 @@
               <a class="nav-link" href="/">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Much longer nav link</a>
+              <a class="nav-link" href="/vendors">Vendors</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Link</a>
